--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^8.2.3",
+    "framer-motion": "^3.2.1",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "10.0.5",
+    "node-mailjet": "^3.3.1",
+    "nodemailer": "^6.4.17",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "uuid": "^8.3.2"
   }
 }
